# esantttos

./: README.md  docker-compose.yml  dockerfile  init-db.sh  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
core/: settings.py  urls.py  views.py
core/templates/: index.html
order/: admin.py  factories.py  urls.py
order/migrations/: 0001_initial.py  0002_remove_order_product_remove_order_quantity.py  0003_alter_orderitem_order.py
order/models/: __init__.py  order.py  order_item.py
order/serializers/: __init__.py  order_item_serializer.py  order_serializer.py
order/viewsets/: __init__.py  order_viewset.py
product/: admin.py  factories.py  urls.py
product/migrations/: 0001_initial.py  0002_rename_categories_product_category.py  0003_alter_product_price.py  0004_remove_product_category_alter_product_stock_and_more.py
product/models/: __init__.py  category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/viewsets/: category_viewset.py  product_viewset.py
tests/: test_category.py  test_order_models.py  test_order_serializers.py  test_product_models.py  test_product_serializers.py  test_protected_token.py
